--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,6 @@
 
     <div data-scroll-container>
         <!-- Landing-section -->
-
         <section data-scroll-section class="f bg-color fade" id="section1">
             <div data-scroll-repeat data-scroll-call="testEvent1" data-scroll data-scroll-speed="1" class="f center baivo-bg-repeat abso full ">
             </div>
@@ -243,7 +242,7 @@
         </section>
 
         <!-- Contact-section -->
-        <section data-scroll-section  id="section4" class="plus radial-color-bg">
+        <section data-scroll-section  id="section4" class="plus black">
             <div class="getincontact full f flex-coulumn center abs overlap">
                 <div data-scroll data-scroll-speed="3" class="full f flex-coulumn center getincontact-wrapper">
                     <span class="line-top"></span>
