Corona news adeed @v1
addded
-corona news section
:-1:

--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,16 @@
 
 <body>
 
+
     <div data-scroll-container>
+        <div id="cornaclickbox" class="corona-clickbox chevron-bg-repeat">
+            <h3>Baivo unterstützt Frankfurt bei der Aufklärung von Coronaregelungen! </h3>
+            <p>Hier gehts zu den Corona News -> Klick</p>
+        </div>
         <!-- Landing-section -->
         <section data-scroll-section class="f bg-color fade" id="section1">
-            <div data-scroll-repeat data-scroll-call="testEvent1" data-scroll data-scroll-speed="1" class="f center baivo-bg-repeat abso full ">
+            <div data-scroll-repeat data-scroll-call="testEvent1" data-scroll data-scroll-speed="1"
+                class="f center baivo-bg-repeat abso full ">
             </div>
 
             <div data-scroll data-scroll-speed="3" class="background ">
@@ -64,7 +70,7 @@
                 </ul>
             </div>
             <div class="f swipercon" id="swiperdown">
-                <div  class="f center swiperlogo">
+                <div class="f center swiperlogo">
                     <svg style="
                 height: 80%;
                 width: auto;
@@ -93,7 +99,7 @@
 
                     <div class="videocontainer f center overlap">
                         <!-- <div class="mobile"></div> -->
-                        <video id="video1" data-scroll-speed="3"  muted src="/media/komp1.mp4"></video>
+                        <video id="video1" data-scroll-speed="3" muted src="/media/komp1.mp4"></video>
                     </div>
                     <div class="halffont left hide-for-mobile">
                         <ul>
@@ -201,7 +207,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div data-scroll  data-scroll-call="videoplayevent" data-scroll-speed="1" class="center textcontainer">
+                    <div data-scroll data-scroll-call="videoplayevent" data-scroll-speed="1"
+                        class="center textcontainer">
                         <h1>
                             Design on a new level
                         </h1>
@@ -242,7 +249,7 @@
         </section>
 
         <!-- Contact-section -->
-        <section data-scroll-section  id="section4" class="plus black">
+        <section data-scroll-section id="section4" class="plus black">
             <div class="getincontact full f flex-coulumn center abs overlap">
                 <div data-scroll data-scroll-speed="3" class="full f flex-coulumn center getincontact-wrapper">
                     <span class="line-top"></span>
@@ -403,6 +410,180 @@
         </div>
     </div>
 
+    <div id="coronanewsid" class="f corona-news full fixed overflow black chevron-bg-repeat hide">
+        <div id="getback" class="get-back abso">
+            <aside>
+
+                <ul>
+                    <li>g</li>
+                    <li>e</li>
+                    <li>t</li>
+                    <li> </li>
+                    <li>b</li>
+                    <li>a</li>
+                    <li>c</li>
+                    <li>k</li>
+
+                </ul>
+
+            </aside>
+        </div>
+        <div class="wrapper f flex-coulumn full baivo-bg-full-white overflow-auto center-vertical">
+
+            <h1>Corona - Regeln "Kurzfassung"</h1>
+            <div class="corona-artikel black">
+                <h2> Corona-Beschränkungen, gilt in Hessen ab dem 2. November.</h2>
+                Legende zum Bild:
+
+                <div class="forbidden"><b> Rot:</b> verboten / geschlossen</div>
+                <div class="gehtso">
+                    <b>Orange:</b> mit Einschränkungen erlaubt / mit Einschränkungen geöffnet
+                </div>
+                <div class="allowed"><b>Grün:</b> erlaubt / geöffnet</div>
+                <div class="img-container overflow f center">
+                    <img src="/media/corona-beschraenkungen_compressed.png" alt="compressed corona regeln hessen"
+                        height="70%" width="70%">
+                </div>
+            </div>
+            <div class="corona-artikel black">
+                <h2>
+                    Neue Allgemeinverfügung der Stadt Frankfurt vom <span class="f-c-fade">30.10.2020, 17:13
+                        Uhr</span>
+                </h2>
+                <article>
+                    <h3>Corona-Kontakt- und Betriebsbeschränkungsverordnung</h3>
+                    <p>sind Aufenthalte im öffentlichen Raum nur alleine</p>
+                    <p>in Gruppen von höchstens fünf Personen</p>
+                    <p>oder mit den Angehörigen des eigenen und eines weiteren Hausstandes gestatte
+                    </p>
+                    <p>Die weiteren Bestimmungen des § 1 Abs. 1 CoKoBeV bleiben unberührt.</p>
+                </article>
+                <article>
+                    <h3>1. Die Pflicht zum Tragen einer Mund-Nasen-Bedeckung besteht:</h3>
+                    <p>In folgenden Gebieten:</p>
+                    <p>
+                        <b>Nördlich:</b> Miquelallee, Adickesallee, Nibelungenallee
+                    </p>
+                    <p>
+                        <b> Östlich:</b> Rothschildallee, Höhenstraße, Habsburgerallee, Henschelstraße, Danziger
+                        Platz,
+                        ab hier westliche Begrenzung der Bahnanlage bis Deutschherrenbrücke
+                    </p>
+                    <p>
+                        <b>Südlich:</b> nördlich der Bahnlinie von der Deutschherrenbrücke bis Theodor-Stern-Kai
+                    </p>
+                    <p>
+                        <b>Westlich:</b> Main-Neckar-Brücke, ab hier östlich der Bahnlinie über die Camberger Straße
+                        bis Emser Brücke, Theodor-Heuss-Allee, Senckenberg Anlage, Zeppelinallee bis Miquelallee
+                    </p>
+
+                    <p>
+                        <b>sowie</b> der Bereich der Berger Straße nördlich des Alleenrings, der Leipziger Straße,
+                        der Königsteiner Straße beschränkt auf den Bereich zwischen Bolongarostraße und
+                        Kasinostraße.
+                    </p>
+                    <p>
+                        Die <b>Mund-Nasen-Bedeckung darf</b> kurzzeitig zum Verzehr von Nahrungsmitteln und
+                        Getränken
+                        oder zum
+                        Konsum von Tabakwaren an Ort und Stelle abgesetzt werden, soweit dabei ununterbrochen ein
+                        Mindestabstand von 1,50 Metern zu anderen Personen eingehalten werden kann oder zu diesen
+                        eine
+                        geeignete Trennvorrichtung vorhanden ist.
+                    </p>
+                    <p>
+                        auch das Tragen in Fahrzeugen oder auf Zusammenkünften und Veranstaltungen sowie
+                        Kulturangeboten
+                        ist das Tragen einer Maske pflicht.
+                    </p>
+
+                </article>
+                <article>
+                    <h3>2. Mund-Nasen-Bedeckung ist: </h3>
+                    <p>jede Bedeckung vor Mund und Nase, die aufgrund ihrer Beschaffenheit unabhängig von einer
+                        Kennzeichnung oder zertifizierten Schutzkategorie geeignet ist,
+                        eine Ausbreitung von übertragungsfähigen Tröpfchenpartikeln oder Aerosolen durch Husten,
+                        Niesen
+                        oder
+                        Aussprache zu verringern.
+                    </p>
+                    <p>
+                        Visiere aus Kunststoff oder Plexiglas, die nur die Partie von Mund und Nase
+                        bedecken, sog. „Kinnvisiere“ sind ausdrücklich keine geeigneten Mund-Nasen-Bedeckungen.
+                    </p>
+                    <p>Ziffer 1 gilt
+                        nicht für Kinder unter 6 Jahren oder Personen, die aufgrund einer gesundheitlichen
+                        Beeinträchtigung
+                        oder Behinderung keine Mund-Nasen-Bedeckung tragen können.
+                    </p>
+
+
+                </article>
+                <article>
+
+                    <h3>3. Der Konsum von Alkohol im öffentlichen Raum ist im gesamten Stadtgebiet</h3>
+                    <p> an allen Tagen der Woche in der Zeit von 23.00 Uhr bis 6.00 Uhr untersagt.
+                        Der Konsum von alkoholischen Getränken ist darüber hinaus auf folgenden
+                    </p>
+                    <ul>
+                        <li> <b>öffentlichen Plätzen, Orten und Anlagen ganztägig verboten: </b></li>
+                        <li>
+                            <b>Grünflächen:</b> Grüneburgpark, Günthersburgpark, Anlagenring (Wallanlagen),
+                            Grünflächen
+                            des
+                            Mainufers
+                            beidseits (Nord- und Südseite) zwischen Friedensbrücke und Osthafenbrücke einschließlich
+                            Hafenpark
+                        </li>
+                        <li>
+                            <b> Straßen und Plätze:</b> Friedberger Platz Luisenplatz ,
+                            Matthias-Beltz-Platz ,
+                            der Kalbächer Gasse, Großen Bockenheimer Straße und der Biebergasse bis einschließlich
+                            Hauptwache
+                            ,Opernplatz , Liebfrauenberg mit Vorplatz der Kleinmarkthalle, Schäfergasse,
+                            Kaiserhofstraße, Bockenheimer Landstraße ab Niedenau in
+                            Richtung Opernplatz, Kettenhofweg ab Niedenau in Richtung Alte Oper ,
+                            Kaisersack, Kaiserstraße, Bahnhofsvorplatz, Taunusstraße, Münchener
+                            Straße , Elbestraße , Moselstraße, Niddastraße , Allerheiligenstraße
+                            , Zeil/Konstablerwache
+                        </li>
+                        <li>
+                            <b>Alt-Sachsenhausen </b>mit der Großen Rittergasse, Kleinen Rittergasse,
+                            Frankensteinerstraße,
+                            Paradiesgasse mit Paradieshof, Klappergasse, Neuer Wall, Affentorplatz.
+                        </li>
+                    </ul>
+                    <p>
+                        <b>Verkaufsstätten und ähnlichen Einrichtungen</b>, insbesondere auch Gaststätten,
+                        Tankstellen,
+                        Kiosken, Einzelhandelsgeschäften und Supermärkten ist es untersagt, an allen Tagen der Woche
+                        in
+                        der Zeit zwischen
+                        23:00 Uhr und 06:00 Uhr alkoholhaltige Getränke abzugeben.
+                    </p>
+                </article>
+                <p> Quellen:
+                <p>
+                    <a
+                        href="https://frankfurt.de/aktuelle-meldung/Sondermeldungen/Sondermeldung-Amtsblatt-Nr-44c-vom-30102020">
+                        https://frankfurt.de/aktuelle-meldung/Sondermeldungen/Sondermeldung-Amtsblatt-Nr-44c-vom-30102020
+                    </a>
+                </p>
+                <p>
+                    <a
+                        href="https://www.hessen.de/sites/default/files/media/staatskanzlei/corona-beschraenkungen_compressed.pdf">
+                        https://www.hessen.de/sites/default/files/media/staatskanzlei/corona-beschraenkungen_compressed.pdf
+                    </a>
+                </p>
+                <p>
+                    Verfügung als .pdf sofort herunterladen: <a class="f-c-fade"
+                        href="http://https://frankfurt.de/-/media/frankfurtde/global/aktuelles-meldungen/aktuelles/pdf/2020/oktober/kw-44/amtsblatt-30-oktober-2020.ashx">Download
+                        drück mich ! </a>
+                </p>
+            </div>
+        </div>
+
+    </div>
     <script src="/js/main.min.js"></script>
 </body>
 
