--- a/src/index.html
+++ b/src/index.html
@@ -410,7 +410,7 @@
         </div>
     </div>
 
-    <div id="coronanewsid" class="f corona-news full fixed overflow black chevron-bg-repeat hide">
+    <div id="coronanewsid" class="corona-news full fixed overflow black chevron-bg-repeat hide">
         <div id="getback" class="get-back abso">
             <aside>
 
