--- a/src/index.html
+++ b/src/index.html
@@ -577,7 +577,7 @@
                 </p>
                 <p>
                     Verfügung als .pdf sofort herunterladen: <a class="f-c-fade"
-                        href="http://https://frankfurt.de/-/media/frankfurtde/global/aktuelles-meldungen/aktuelles/pdf/2020/oktober/kw-44/amtsblatt-30-oktober-2020.ashx">Download
+                        href="https://frankfurt.de/-/media/frankfurtde/global/aktuelles-meldungen/aktuelles/pdf/2020/oktober/kw-44/amtsblatt-30-oktober-2020.ashx">Download
                         drück mich ! </a>
                 </p>
             </div>
