Small changes to Master

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 
                     <div class="videocontainer f center overlap">
                         <!-- <div class="mobile"></div> -->
-                        <video id="video1" data-scroll-speed="3" muted src="/media/komp1.mp4"></video>
+                        <video id="video1" playsinline data-scroll-speed="3" muted src="/media/komp1.mp4"></video>
                     </div>
                     <div class="halffont left hide-for-mobile">
                         <ul>
