--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,14 @@
 <body>
     <div data-scroll-container>
        <!-- Landing-section -->
-        <section data-scroll-section class="f bg-color fade" id="section1">
+        <section data-scroll-section class="f bg-colorgradient fade-linear" id="section1">
             <div data-scroll-repeat data-scroll-call="testEvent1" data-scroll data-scroll-speed="1"
-                class="f center baivo-bg-repeat abso full ">
+                class="f center blur baivo-bg-repeat abso full ">
             </div>
 
             <div data-scroll data-scroll-speed="3" class="background ">
-                <img class="baivologo" src="/svg/logo.svg" alt="logo">
+                <img class="baivologo" src="/svg/BaivoREWORK_1.svg" alt="logo">
+                 <!-- <img class="baivologo" src="/svg/BaivoREWORK_1.svg" alt="logo">  -->
                 <h1>WE DO</h1>
             </div>
 
@@ -86,7 +87,7 @@
         </section>
 
         <!-- DesignOnAnewLevel-section -->
-        <section data-scroll-section class="f plus" id="section2">
+        <section data-scroll-section class="f plus  black chevron-bg-repeat" id="section2">
             <div class="full">
                 <div class="half half-width-viewportsm">
 
@@ -147,7 +148,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="f half half-right black half-width-viewportsm overlap chevron-bg-repeat">
+                <div class=" f half half-right  half-width-viewportsm overlap ">
                     <div class="halffont right hide-for-mobile">
                         <ul class="">
                             <li>
@@ -201,7 +202,7 @@
                         </ul>
                     </div>
                     <div data-scroll data-scroll-call="videoplayevent" data-scroll-speed="1"
-                        class="center textcontainer">
+                        class=" center textcontainer">
                         <h1>
                             Design on a new level
                         </h1>
